--- a/app/src/main/res/layout/server_auth.xml
+++ b/app/src/main/res/layout/server_auth.xml
@@ -8,7 +8,7 @@
     android:padding="4dp">
 
     <EditText
-        android:id="@+id/auth_input"
+        android:id="@+id/auth_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
