Refactor appId and package name Complete SearchFTP system Complete search of FileList Complete move file of FileList remove move file from FileCommand

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:background="@color/grey"
-    tools:context="com.example.ftpclientandroid.activities.MainActivity">
+    tools:context="com.kyang.ftpclient.activities.MainActivity">
 
     <LinearLayout
         android:id="@+id/titleBar"
