Add night mode Downgrade to Gradle 8.1.0

--- a/app/src/main/res/layout/server_auth.xml
+++ b/app/src/main/res/layout/server_auth.xml
@@ -5,6 +5,7 @@
     android:maxWidth="488dp"
     android:minWidth="320dp"
     android:orientation="vertical"
+    android:background="@drawable/bg_rounded_button"
     android:padding="4dp">
 
     <EditText
